<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentTitleLoading"
    style="@style/ActionBarTitleBarStyle">

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonFragmentTitle"
            style="@style/ActionBarButtonStyle"
            android:drawableLeft="@drawable/icon_back"
            android:drawableStart="@drawable/icon_back"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBarFragmentTitleLoading"
            style="@style/ActionBarButtonStyle"
            android:indeterminateDrawable="@drawable/loading"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/buttonFragmentUpdate"
            style="@style/ActionBarButtonStyle"
            android:contentDescription="@string/text_update"
            android:src="@drawable/icon_refresh" />

        <ToggleButton
            android:id="@+id/toggleButtonShowOffline"
            style="@style/ActionBarButtonStyle"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/text_show_offline"
            android:textOn="@string/text_show_online" />

        <ImageButton
            android:id="@+id/buttonFragmentAdd"
            style="@style/ActionBarButtonStyle"
            android:contentDescription="@string/text_add"
            android:src="@drawable/icon_search" />

        <ToggleButton
            android:id="@+id/toggleButtonFragmentStar"
            style="@style/ActionBarButtonStyle"
            android:drawableEnd="@drawable/ps2_button_action_star"
            android:textOff="@string/text_empty"
            android:textOn="@string/text_empty" />

        <ToggleButton
            android:id="@+id/toggleButtonFragmentAppend"
            style="@style/ActionBarButtonStyle"
            android:drawableEnd="@drawable/ps2_button_action_append"
            android:textOff="@string/text_empty"
            android:textOn="@string/text_empty" />

        <ToggleButton
            android:id="@+id/toggleButtonWeapons"
            style="@style/ActionBarButtonStyle"
            android:checked="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/text_killed_by"
            android:textOn="@string/text_my_kills" />

    </LinearLayout>

</HorizontalScrollView>