<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
<LinearLayout
    style="@style/LayoutFrameStyle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fieldSearchProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/text_profile"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/imageButtonSearchProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ps2_button_bold_green"
            android:contentDescription="@string/text_search_button"
            android:src="@drawable/icon_search" />

    </LinearLayout>

    <ListView
        android:id="@+id/listFoundProfiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"></ListView>

</LinearLayout>

</layout>