<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center" />

            <Button
                android:id="@+id/buttonPreferedProfile"
                style="@style/ButtonStyle"
                android:drawableStart="@drawable/icon_star_selected"
                android:gravity="center"
                android:visibility="gone"
                tools:text="CRamsan"
                tools:visibility="visible" />

            <Button
                android:id="@+id/buttonPreferedOutfit"
                style="@style/ButtonStyle"
                android:drawableStart="@drawable/icon_star_selected"
                android:gravity="center"
                android:visibility="gone"
                tools:text="Derp Company"
                tools:visibility="visible" />

            <Button
                android:id="@+id/buttonCharacters"
                style="@style/ButtonStyle"
                android:text="@string/title_profiles" />

            <Button
                android:id="@+id/buttonServers"
                style="@style/ButtonStyle"
                android:text="@string/title_servers" />

            <Button
                android:id="@+id/buttonOutfit"
                style="@style/ButtonStyle"
                android:text="@string/title_outfits" />

            <Button
                android:id="@+id/buttonTwitter"
                style="@style/ButtonStyle"
                android:text="@string/title_twitter" />

            <Button
                android:id="@+id/buttonRedditFragment"
                style="@style/ButtonStyle"
                android:text="@string/title_reddit" />

            <Button
                android:id="@+id/buttonAbout"
                style="@style/ButtonStyle"
                android:text="@string/title_about" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>
</layout>