<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>

<ListView
    android:id="@+id/listViewProfileList"
    style="@style/LayoutFrameStyle"
    android:cacheColorHint="#00000000">

</ListView>

</layout>