<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
<LinearLayout
    android:id="@+id/linearLayoutServerList"
    style="@style/LayoutFrameStyle">

    <ListView
        android:id="@+id/listViewServers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"></ListView>

</LinearLayout>
</layout>